# BlazeBot

./: README.md  pyproject.toml
src/BlazeBot/: bot.py
src/BlazeBot/Cogs/: uab.py
