[project]
name = "BlazeBot"
version = "0.1.0"
description = ""
authors = [
    {name = "Jayden Pyles", email = "jpylesbusiness@gmail.com"},
]
dependencies = [
    "imap-tools>=1.2.0",
    "imaplib2>=3.6",
    "pycord>=0.1.1",
    "discord>=2.3.2",
    "dotenv>=0.0.5",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
bot = "python3 src/BlazeBot/bot.py"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pyright]
include = ["src/BlazeBot"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = []
defineConstant = { DEBUG = true }
stubPath = ""

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"


[tool.isort]
length_sort = "1"
profile = "black"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib = "STL"
import_heading_thirdparty = "PDM"
import_heading_firstparty = "LOCAL"
import_heading_localfolder = "LOCAL"
